# altrepoapi

./: .dockerignore  .env.example  AGENTS.md  AUTHORS.txt  CHANGELOG.md  Dockerfile  Dockerfile-tests  LICENSE  LICENSE.txt  MANIFEST.in  README.md  altrepo-api  altrepo-api.service  altrepo_api_run_app.py  api.conf.docker  api.conf.docker.example  api.conf.example  api_v1.py  app.py  config_example.conf  docker-compose.tests.yml  docker-compose.yml  paths.py  requirements.txt  run_app.py  settings.py  setup.cfg  setup.py  utils.py  wsgi.py
.gear/: altrepo-api.spec  rules
.gear/tags/: list
altrepo_api/: __init__.py  __main__.py  api_v1.py  app.py  decorators.py  manage_v1.py  read_config.py  settings.py  utils.py  version.py
altrepo_api/api/: __init__.py  base.py  maintainer_score_config.py  metadata.py  misc.py  parser.py  tools.py
altrepo_api/database/: connection.py
altrepo_api/libs/: conflict_filter.py  dependency_match.py  dependency_sorting.py  errata_service.py  exceptions.py  librpm_functions.py  package_dependencies.py  pagination.py  sorting.py
altrepo_api/static/: LICENSE
api/: README.md  __init__.py  base.py  misc.py  restplus.py
api/auth/: auth.py  decorators.py  (+1 more)
database/: bug_sql.py  connection.py  depends_sql.py  package_sql.py  packageset_sql.py  site_sql.py  task_sql.py
libs/: conflict_filter.py  dependency_sorting.py  exceptions.py  package_dependencies.py
rust/altrepo-rdb-client/: Cargo.toml  README.md
rust/altrepo-rdb-client/examples/: basic.rs
rust/altrepo-rdb-client/src/: lib.rs  models.rs
tests/: api.conf  api.conf.example
(+489 files in other folders)
