[package]
name = "altrepo-rdb-client"
version = "0.1.0"
edition = "2021"
description = "Асинхронный Rust-клиент для API rdb.altlinux.org"
license = "AGPL-3.0-or-later"
repository = "https://github.com/altlinux/altrepo-api"
readme = "README.md"
keywords = ["altlinux", "api", "client", "http"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
